--- a/flask-app/templates/tambahdatasiswa.html
+++ b/flask-app/templates/tambahdatasiswa.html
@@ -101,6 +101,7 @@
                                                 <option value="Reguler">Reguler</option>
                                                 <option value="Yayasan">Yayasan</option>
                                                 <option value="Inklusi">Inklusi</option>
+                                                <option value="Anak Pegawai">Anak Pegawai</option>
                                             </select>
                                         </div>
                                     </div>
