--- a/flask-app/templates/tabelsiswa.html
+++ b/flask-app/templates/tabelsiswa.html
@@ -120,7 +120,7 @@
                             <a href="{{ url_for('riwayat_pembayaran', nis = siswa_smp['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
                         </td>
