--- a/flask-app/templates/login-page.html
+++ b/flask-app/templates/login-page.html
@@ -28,8 +28,8 @@
             <img src="{{ url_for('static', filename='Image/logo-dj.png') }}" class = "img">
           </div>
             <div class="form-floating mb-3">
-              <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan NIP" name="username">
-              <label for="floatingInput">NIP</label>
+              <input type="text" class="form-control" id="floatingInput" placeholder="Masukkan Username" name="username">
+              <label for="floatingInput">Username</label>
             </div>
             <div class="form-floating">
               <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
