--- a/flask-app/templates/ubahdatapegawai.html
+++ b/flask-app/templates/ubahdatapegawai.html
@@ -384,6 +384,12 @@
                 setInputFilter(document.getElementById("nip_pegawai"), function(value) {
                     return /^\d*\.?\d*$/.test(value);
                   }, "Only digits and '.' are allowed");
+
+                otoritas = document.getElementById("otoritas").value
+                if (otoritas == "Admin" || otoritas == "Staff"){
+                    document.getElementById("username").disabled = false;
+                    document.getElementById("password").disabled = false;
+                }
             </script>
             {% endblock %}
 
