--- a/flask-app/templates/riwayat_pembayaran.html
+++ b/flask-app/templates/riwayat_pembayaran.html
@@ -60,11 +60,11 @@
                             
                         </div>
                     </div>
-                    <div class="column">
+                    <!-- <div class="column">
                         <h4 class="text" style="margin-left:10px">Rincian Tagihan</h4>
                         <div class="card-nosh" style="margin-left:10px">
                         </div>
-                    </div>
+                    </div> -->
                     
                 </div>
                 <div class="filter-kiri">
