--- a/flask-app/templates/ubahdatapegawai.html
+++ b/flask-app/templates/ubahdatapegawai.html
@@ -13,7 +13,7 @@
     <!-- Sidebar -->
             {% block body %}
             <h1 class="page-title">Ubah Data Pegawai Daarul Jannah</h1>
-            <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
+            <h4 class="sub-title">Data Pegawai Sekolah Daarul Jannah</h4>
             <form action="{{ url_for('ubah_pegawai', nip = pegawai['nip']) }}" method="post">
             <div class="container">
                 <div class="card">
