--- a/flask-app/templates/datasiswa.html
+++ b/flask-app/templates/datasiswa.html
@@ -13,7 +13,7 @@
             {% block body %}
             {% set popup = True %}
             <h1 class="page-title">Detail Data Siswa/i Daarul Jannah</h1>
-            <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
+            <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
             
             <div class="container">
                 <div class="card">
