--- a/flask-app/templates/pembayaran.html
+++ b/flask-app/templates/pembayaran.html
@@ -13,7 +13,7 @@
     <body>
         {% block body %}
         
-        <h1 class="page-title">Data Pembayaran Siswa/i Sekolah Daarul Jannah</h1>
+        <h1 class="page-title">Pembayaran Siswa/i Sekolah Daarul Jannah</h1>
         <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
         <!-- <form action="" method="post" enctype="multipart/form-data"> -->
             <div class="container">
