--- a/flask-app/templates/ubahdatasiswa.html
+++ b/flask-app/templates/ubahdatasiswa.html
@@ -12,7 +12,7 @@
     <!-- Sidebar -->
             {% block body %}
             <h1 class="page-title">Ubah Data Siswa/i Daarul Jannah</h1>
-            <h4 class="sub-title">Sistem Cek Pembayaran Sekolah Daarul Jannah</h4>
+            <h4 class="sub-title">Data Siswa/i Sekolah Daarul Jannah</h4>
             <form action="{{ url_for('ubah_siswa', nis = siswa['nis']) }}" method="post">
             <div class="container">
                 <div class="card">
