Penambahan opsi status siswa

--- a/flask-app/templates/tambahdatasiswa.html
+++ b/flask-app/templates/tambahdatasiswa.html
@@ -102,6 +102,9 @@
                                                 <option value="Yayasan">Yayasan</option>
                                                 <option value="Inklusi">Inklusi</option>
                                                 <option value="Anak Pegawai">Anak Pegawai</option>
+                                                <option value="Yatim">Yatim</option>
+                                                <option value="Adik Kakak">Adik Kakak</option>
+                                                <option value="Alumni">Alumni</option>
                                             </select>
                                         </div>
                                     </div>
