--- a/flask-app/templates/tabelsiswa.html
+++ b/flask-app/templates/tabelsiswa.html
@@ -46,8 +46,8 @@
                 </div>
             </div>
             
-            <div class="table" id="tabel_siswa">
-                <table class="shadow coll">
+            <div class="table">
+                <table class="shadow coll" id="tabel_siswa">
                     <tr>
                         <th>NIS</th>
                         <th>Nama Siswa/i</th>
