add riwayat transaksi

--- a/flask-app/templates/base.html
+++ b/flask-app/templates/base.html
@@ -57,6 +57,12 @@
                                 </a>
                             </li>
                             {% endif %}
+                            <li>
+                                <a href="" class="li-menu" id="riwayat_pembayaran">
+                                    <i class="fa-solid fa-book-bookmark"></i></i></i>&emsp;
+                                    <h5>Riwayat Transaksi</h5>
+                                </a>
+                            </li>
                         </ul>
                     </nav>
                     
