--- a/flask-app/static/CSS/base.css
+++ b/flask-app/static/CSS/base.css
@@ -147,6 +147,7 @@ nav a{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
     padding: 1vw;
 }
 
