--- a/flask-app/templates/base.html
+++ b/flask-app/templates/base.html
@@ -49,6 +49,12 @@
                                     <h5 >Data Siswa/i</h5>
                                 </a>
                             </li>
+                            <li>
+                                <a href="/riwayat_transaksi" class="li-menu" id="riwayat_transaksi">
+                                    <i class="fa-solid fa-book-bookmark"></i></i></i>&emsp;
+                                    <h5>Riwayat Transaksi</h5>
+                                </a>
+                            </li>
                             {% if session['otoritas'] == "Admin"%}
                             <li>
                                 <a href="/manajemen_pegawai" class="li-menu" id="data_staf">
@@ -57,12 +63,7 @@
                                 </a>
                             </li>
                             {% endif %}
-                            <li>
-                                <a href="" class="li-menu" id="riwayat_pembayaran">
-                                    <i class="fa-solid fa-book-bookmark"></i></i></i>&emsp;
-                                    <h5>Riwayat Transaksi</h5>
-                                </a>
-                            </li>
+                            
                         </ul>
                     </nav>
                     
