--- a/flask-app/templates/riwayat_transaksi.html
+++ b/flask-app/templates/riwayat_transaksi.html
@@ -47,15 +47,22 @@
             </div>
             
             <div class="table" id="tabel_siswa">
-                <table class="shadow coll">
+                <table class="shadow coll" style="overflow-x: auto;">
                     <tr>
                         <th>NIS</th>
                         <th>Nama Siswa/i</th>
-                        <th>Jenis Kelamin</th>
-                        <th>Status Siswa/i</th>
-                        <th>Tingkat</th>
-                        <th>Kelas</th>
-                        <th>Menu Fungsi</th>
+                        <th>Periode</th>
+                        <th>Waktu Pembayaran</th>
+                        <th>SPP</th>
+                        <th>Tabungan Wajib</th>
+                        <th>Katering</th>
+                        <th>Jemputan</th>
+                        <th>Ekskul</th>
+                        <th>Majelis Sekolah</th>
+                        <th>Kelas Berbakat</th>
+                        <th>Bimbel</th>
+                        <th>Total</th>
+                        <!-- <th>Menu Fungsi</th> -->
                     </tr>
                     {% for siswa_tk in siswa_tk %}
                     <tr>
@@ -67,7 +74,14 @@
                         <td>{{ siswa_tk.status }}</td>
                         <td> TK </td>
                         <td>{{ siswa_tk.kelas }}</td>
-                        <td class="row" style="justify-content:center ;">
+                        <td >
+                            {{siswa_tk.nama_siswa}}
+                        </td>
+                        <td>{{ siswa_tk.jenis_kelamin }}</td>
+                        <td>{{ siswa_tk.status }}</td>
+                        <td> TK </td>
+                        <td>{{ siswa_tk.kelas }}</td>
+                        <!-- <td class="row" style="justify-content:center ;">
                             <a href="{{ url_for('detail_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
                                 <i class="fa-solid fa-id-card"></i>
                             </a>
@@ -77,7 +91,7 @@
                             <a href="{{ url_for('pembayaran_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
-                        </td>
+                        </td> -->
                     </tr>
                     {% endfor%}
                     {% for siswa_sd in siswa_sd %}
@@ -129,7 +143,7 @@
                 </table>
             </div>
         </div>
-        <script src="{{url_for('static', filename='Javascript/datsis_active_class.js')}}">   </script>
+        <script src="{{url_for('static', filename='Javascript/riwayattrans_active_class.js')}}">   </script>
         {% endblock %}
     </body>
 </html>
