--- a/flask-app/templates/datasiswa.html
+++ b/flask-app/templates/datasiswa.html
@@ -51,7 +51,7 @@
                                     <h4 class="in-1">Tingkat</h4>
                                     <h4>:</h4>
                                     <div class="dtl-style">
-                                        <h4>{{tingkat}}</h4>
+                                        <h4>{{siswa.tingkat}}</h4>
                                     </div>
                                 </div>
                                 <div class="row detail">
