--- a/flask-app/templates/tabelsiswa.html
+++ b/flask-app/templates/tabelsiswa.html
@@ -57,75 +57,30 @@
                         <th>Kelas</th>
                         <th>Menu Fungsi</th>
                     </tr>
-                    {% for siswa_tk in siswa_tk %}
+                    {% for siswa in siswa %}
                     <tr>
-                        <td>{{ siswa_tk.nis }}</td>
+                        <td>{{ siswa.nis }}</td>
                         <td class="tb-name">
-                            {{siswa_tk.nama_siswa}}
+                            {{siswa.nama_siswa}}
                         </td>
-                        <td>{{ siswa_tk.jenis_kelamin }}</td>
-                        <td>{{ siswa_tk.status }}</td>
-                        <td> TK </td>
-                        <td>{{ siswa_tk.kelas }}</td>
+                        <td>{{ siswa.jenis_kelamin }}</td>
+                        <td>{{ siswa.status }}</td>
+                        <td> {{siswa.tingkat}} </td>
+                        <td>{{ siswa.kelas }}</td>
                         <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
+                            <a href="{{ url_for('detail_siswa', nis = siswa['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
                                 <i class="fa-solid fa-id-card"></i>
                             </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_tk['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
+                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
                                 <i class="fi fi-sr-ballot"></i>
                             </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_tk['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
+                            <a href="{{ url_for('pembayaran_siswa', nis = siswa['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
                                 <i class="fi fi-sr-money-check-edit"></i>
                             </a>
                         </td>
                     </tr>
                     {% endfor%}
-                    {% for siswa_sd in siswa_sd %}
-                    <tr>
-                        <td>{{ siswa_sd.nis }}</td>
-                        <td>{{siswa_sd.nama_siswa}}
-                            
-                        </td>
-                        <td>{{ siswa_sd.jenis_kelamin }}</td>
-                        <td>{{ siswa_sd.status }}</td>
-                        <td> SD </td>
-                        <td>{{ siswa_sd.kelas }}</td>
-                        <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
-                                <i class="fa-solid fa-id-card"></i>
-                            </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_sd['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
-                                <i class="fi fi-sr-ballot"></i>
-                            </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_sd['nis']) }}" class="btn-2 fungsi" title="Pembayaran SPP">
-                                <i class="fi fi-sr-money-check-edit"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor%}
-                    {% for siswa_smp in siswa_smp %}
-                    <tr>
-                        <td>{{ siswa_smp.nis }}</td>
-                        <td>{{siswa_smp.nama_siswa}}
-                            
-                        </td>
-                        <td>{{ siswa_smp.jenis_kelamin }}</td>
-                        <td>{{ siswa_smp.status }}</td>
-                        <td> SMP </td>
-                        <td>{{ siswa_smp.kelas }}</td>
-                        <td class="row" style="justify-content:center ;">
-                            <a href="{{ url_for('detail_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Detail Siswa">
-                                <i class="fa-solid fa-id-card"></i>
-                            </a>
-                            <a href="{{ url_for('riwayat_pembayaran', nis = siswa_smp['nis']) }}" class="btn-1 fungsi" title="Riwayat Pembayaran">
-                                <i class="fi fi-sr-ballot"></i>
-                            </a>
-                            <a href="{{ url_for('pembayaran_siswa', nis = siswa_smp['nis']) }}" class="btn-2 fungsi" title="Pembayaran">
-                                <i class="fi fi-sr-money-check-edit"></i>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endfor%}
+                    
                 </table>
             </div>
         </div>
