--- a/flask-app/templates/riwayat_pembayaran.html
+++ b/flask-app/templates/riwayat_pembayaran.html
@@ -6,6 +6,7 @@
         {% block head %}
             <!-- <title>Riwayat Pembayaran - Sistem Pembayaran DJ</title> -->
             <script>document.title = "Riwayat Pembayaran - Sistem Pembayaran DJ"</script>
+            <script src="{{url_for('static', filename='Javascript/datsis_active_class.js')}}"></script>
         {% endblock %}
     </head>
 
